--- a/app/admin/view/coupon/index.html
+++ b/app/admin/view/coupon/index.html
@@ -29,34 +29,28 @@
 <body>
 <div style="margin-top: 10px;">
     <span class="layui-breadcrumb">
-      <a href="javascript:;" class="menu_link" menu_link="/admin/User/index" menu_id="2">账户管理</a>
+      <a href="javascript:;" class="menu_link" menu_link="/admin/Coupon/index" menu_id="2">优惠券</a>
       <a><cite>列表</cite></a>
     </span>
 </div>
 
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 15px;">
-    <legend>账户管理</legend>
+    <legend>优惠券</legend>
 </fieldset>
 
 <div class="demoTable">
     <div class="layui-form-item">
         <div class="layui-inline">
-            <label class="layui-form-label">账户：</label>
+            <label class="layui-form-label">名称：</label>
             <div class="layui-input-inline">
-                <input class="layui-input" maxlength="40" name="search" id="search_content" placeholder="请输入账户名称/真实姓名" autocomplete="off">
+                <input class="layui-input" maxlength="40" name="search" id="search_content" placeholder="请输入优惠券名称" autocomplete="off">
             </div>
         </div>
 
         <div class="layui-inline">
-            <label class="layui-form-label">电话号码：</label>
-            <div class="layui-input-inline">
-                <input class="layui-input" name="telphone" id="telphone" placeholder="请输入电话号码" autocomplete="off">
-            </div>
-        </div>
-        <div class="layui-inline">
             <div class="layui-input-inline">
                 <button id="search" type="button" class="layui-btn" data-type="reload">搜索</button>
-<!--                <button type="button" class="layui-btn layui-btn-warm" data-type="reset">重置</button>-->
+                <!--                <button type="button" class="layui-btn layui-btn-warm" data-type="reset">重置</button>-->
                 <div class="layui-btn-group demoTable" style="margin:5px 0">
                     <button class="layui-btn layui-btn-normal " data-type="add">新增</button>
                 </div>
@@ -65,23 +59,11 @@
     </div>
 </div>
 
-<table class="layui-hide" id="user_list" lay-filter="user_list"></table>
+<table class="layui-hide" id="hospital_list" lay-filter="hospital_list"></table>
 
-
-<script type="text/html" id="show_avatar">
-    <!-- 头像 -->
-    <img class="show_user_img" src="{{d.avatar}}" onclick="show_img('{{ d.avatar }}')">
-</script>
-
-<script type="text/html" id="show_status">
-    <input type="checkbox" name="status" value="{{d.id}}" lay-skin="switch" lay-text="正常|停用" lay-filter="changeStatus" {{ d.status == 1 ? 'checked' : '' }}>
-</script>
 
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-     {if condition="$is_show == 1"}
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-    {/if}
 </script>
 
 {include file="public::bottom"}
@@ -96,19 +78,18 @@
         //第一个实例
         table.render({
             id: 'tblId'
-            ,elem: '#user_list'
-            ,url: '/admin/User/index' //数据接口
+            ,elem: '#hospital_list'
+            ,url: '/admin/Coupon/index' //数据接口
             ,page: true //开启分页
             ,cellMinWidth: 80
             ,cols: [ [ //表头
-                { fixed: 'left',field:'id',sort: true, title: 'ID', width:'8%', align:'center'}
-                ,{fixed: 'left',field: 'username', title: '账户名称',align:'center',width:'13%'}
-                ,{field: 'avatar', title: '头像',templet: '#show_avatar',align:'center',width:'10%'}
-                ,{field: 'truename', title: '真实姓名', align:'center',width:'13%'}
-                ,{field: 'telphone', title: '电话号码',align:'center',width:'15%'}
-                ,{field: 'email', title: '邮箱', align:'center',width:'16%'}
-                ,{field: 'status', title: '状态',templet: '#show_status',align:'center',width:'11%',style:'cursor:pointer;'}
-                ,{fixed: 'right',title: '操作', width:'15%',align:'center', toolbar: '#barDemo'}
+                { fixed: 'left',field:'id',sort: true, title: 'ID', width:'10%', align:'center'}
+                ,{fixed: 'left',field: 'name', title: '名称',align:'center',width:'15%'}
+                ,{field: 'code', title: '识别码', align:'center',width:'15%'}
+                ,{field: 'summary', title: '简介', align:'center',width:'15%'}
+                ,{field: 'scenes', title: '可用项目',align:'center',width:'20%'}
+                ,{field: 'amount', title: '金额', align:'center',width:'15%'}
+                ,{fixed: 'limit',title: '限制',width:'15%', align:'center', toolbar: '#barDemo'}
             ] ]
         });
 
@@ -118,10 +99,10 @@
                 // layer.alert('新增');
                 layer.open({
                     type: 2,
-                    title: '新增账户',
+                    title: '新增优惠券',
                     shadeClose: true,
                     area: ['650px', '90%'],
-                    content: '/admin/User/add' //iframe的url
+                    content: '/admin/Coupon/add' //iframe的url
                 });
                 // $("body",parent.document).find('iframe').attr('src','/Menu/add');
             },
@@ -142,11 +123,11 @@
         };
 
         //监听行工具事件
-        table.on('tool(user_list)', function(obj){
+        table.on('tool(hospital_list)', function(obj){
             var data = obj.data;
             if(obj.event === 'del'){
                 layer.confirm('真的删除行么', function(index){
-                    $.post("/admin/User/delete", {id:data.id,'type':0}, function (data) {
+                    $.post("/admin/Coupon/delete", {id:data.id,'type':0}, function (data) {
                         if(data.code == 200){
                             table.reload('tblId', {
                                 page: {
@@ -163,36 +144,9 @@
                     title: '编辑角色',
                     shadeClose: true,
                     area: ['650px', '90%'],
-                    content: '/admin/User/edit?id='+data.id //iframe的url
+                    content: '/admin/Coupon/edit?id='+data.id //iframe的url
                 });
             }
-        });
-
-        //监听状态操作
-        form.on('switch(changeStatus)', function(obj){
-            if(obj.elem.checked){
-                var type = 1;
-            }else{
-                var type = 2;
-            }
-            $.ajax({
-                type:'get',
-                url:'/admin/User/delete',
-                data:{'id':this.value,'type':type},
-                success:function(data){
-                    layer.msg(data.msg);
-                    if(data.code == 200){
-                        table.reload('tblId', {
-                            page: {
-                                curr: 1 //重新从第 1 页开始
-                            }
-                        }, 'data');
-                    }
-                },
-                error:function () {
-                    layer.msg('请求失败');
-                }
-            });
         });
 
         $('.demoTable .layui-btn').on('click', function(){
