--- a/app/admin/view/department/index.html
+++ b/app/admin/view/department/index.html
@@ -1,30 +1,26 @@
-<?php /*a:3:{s:61:"/private/var/www/admin-project/app/admin/view/news/index.html";i:1599814551;s:62:"/private/var/www/admin-project/app/admin/view/public//top.html";i:1599815783;s:65:"/private/var/www/admin-project/app/admin/view/public//bottom.html";i:1599814551;}*/ ?>
 <!DOCTYPE html>
 <html>
 <head>
-   <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>后台管理系统</title>
-<link rel="stylesheet" href="/static/layui/css/layui.css">
-<style>
-    .layui-nav-child a{
-        margin-left: 24px;
-    }
-    .layui-nav-item cite{
-        margin-left: 10px;
-    }
-    .form-item{
-        margin-top: 2%;
-    }
-</style>
+    {include file="public::top"}
     <style>
         body{
             width: 97%;
             padding-left: 20px;
         }
-        .show_banner{
+        .role_node{
+            color: rgba(0,0,0,.85);
+            margin: 0 5px 0 0;
+            padding: 0 7px;
+            font-size: 12px;
+            line-height: 20px;
+            white-space: nowrap;
+            background: #fafafa;
+            border: 1px solid #d9d9d9;
+            border-radius: 2px;display: inline-block;
+        }
+        .show_user_img{
             display: inline-block;
-            width: 80%;
+            width: 50%;
             height: 100%;
             cursor: pointer;
         }
@@ -33,26 +29,28 @@
 <body>
 <div style="margin-top: 10px;">
     <span class="layui-breadcrumb">
-      <a href="javascript:;" class="menu_link" menu_link="/admin/News/index" menu_id="22">新闻管理</a>
+      <a href="javascript:;" class="menu_link" menu_link="/admin/Hospital/index" menu_id="2">科室管理</a>
       <a><cite>列表</cite></a>
     </span>
 </div>
 
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 15px;">
-    <legend>新闻管理</legend>
+    <legend>科室管理</legend>
 </fieldset>
 
-<div class="demoTable layui-form">
+<div class="demoTable">
     <div class="layui-form-item">
         <div class="layui-inline">
-            <label class="layui-form-label">搜索：</label>
+            <label class="layui-form-label">科室名称：</label>
             <div class="layui-input-inline">
-                <input class="layui-input" name="search" id="search_content" placeholder="标题/简介" autocomplete="off">
+                <input class="layui-input" maxlength="40" name="search" id="search_content" placeholder="请输入科室名称" autocomplete="off">
             </div>
         </div>
+
         <div class="layui-inline">
             <div class="layui-input-inline">
                 <button id="search" type="button" class="layui-btn" data-type="reload">搜索</button>
+                <!--                <button type="button" class="layui-btn layui-btn-warm" data-type="reset">重置</button>-->
                 <div class="layui-btn-group demoTable" style="margin:5px 0">
                     <button class="layui-btn layui-btn-normal " data-type="add">新增</button>
                 </div>
@@ -61,70 +59,34 @@
     </div>
 </div>
 
-<table class="layui-hide" id="news_list" lay-filter="news_list"></table>
-
-<script type="text/html" id="show_banner">
-    <!-- 头像 -->
-    <img class="show_banner" src="{{d.img_src}}" onclick="show_img('{{ d.img_src }}')">
-</script>
+<table class="layui-hide" id="hospital_list" lay-filter="hospital_list"></table>
 
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 
-<script src="/static/layui/layui.js"></script>
-<script src="/static/js/jquery-3.4.1.min.js"></script>
-<script>
-    //JavaScript代码区域
-    layui.use('element', function(){
-        var element = layui.element;
-
-
-    });
-
-    $('.menu_link').on('click',function(){
-        var url=$(this).attr('menu_link');
-        var menu_id=$(this).attr('menu_id');
-        if($('iframe').attr('src')){
-            $('iframe').attr('src',url);
-            $('iframe').attr('menu_id',menu_id);
-        }else{
-            parent.window.document.getElementById("iframe").setAttribute('src',url);
-            parent.window.document.getElementById("iframe").setAttribute('menu_id',menu_id);
-        }
-    });
-
-    function loadFrame(obj){
-        var menu_id=parent.window.document.getElementById("iframe").getAttribute('menu_id');
-        $('.menu_link').each(function(){
-            if(menu_id == $(this).attr('menu_id')){
-                $(this).parent().addClass('layui-this');
-            }else{
-                $(this).parent().removeClass('layui-this');
-            }
-        })
-    }
-</script>
+{include file="public::bottom"}
 
 <script>
 
-    layui.use(['table'], function(){
-        var table = layui.table;
+    layui.use(['table','layer','form'], function(){
+        var table = layui.table
+            ,layer=layui.layer
+            ,form=layui.form;
 
         //第一个实例
         table.render({
             id: 'tblId'
-            ,elem: '#news_list'
-            ,url: '/admin/News/index' //数据接口
+            ,elem: '#hospital_list'
+            ,url: '/admin/Department/index' //数据接口
             ,page: true //开启分页
+            ,cellMinWidth: 80
             ,cols: [ [ //表头
                 { fixed: 'left',field:'id',sort: true, title: 'ID', width:'10%', align:'center'}
-                ,{fixed: 'left',field: 'title', title: '新闻标题',width:'16%', align:'center'}
-                ,{field: 'img_src', title: '图片', align:'center',width:'25%',templet: '#show_banner'}
-                ,{field: 'desc', title: '简介',width:'20%', align:'center'}
-                ,{field: 'publish_time', title: '发布日期',width:'15%', align:'center'}
-                ,{fixed: 'right',title: '操作', width:'15%',align:'center', toolbar: '#barDemo'}
+                ,{fixed: 'left',field: 'name', title: '科室名称',align:'center',width:'40%'}
+                ,{field: 'summary', title: '简介', align:'center',width:'35%'}
+                ,{fixed: 'right',title: '操作',width:'16%', align:'center', toolbar: '#barDemo'}
             ] ]
         });
 
@@ -134,33 +96,35 @@
                 // layer.alert('新增');
                 layer.open({
                     type: 2,
-                    title: '新增新闻',
+                    title: '新增科室',
                     shadeClose: true,
-                    area: ['750px', '90%'],
-                    content: '/admin/News/add' //iframe的url
+                    area: ['650px', '90%'],
+                    content: '/admin/Department/add' //iframe的url
                 });
                 // $("body",parent.document).find('iframe').attr('src','/Menu/add');
             },
             reload: function(){
                 var search = $('#search_content').val();
+                var telphone=$('#telphone').val();
                 //执行重载
                 table.reload('tblId', {
                     page: {
                         curr: 1 //重新从第 1 页开始
                     }
                     ,where: {
-                        search: search
+                        search: search,
+                        telphone:telphone
                     }
                 }, 'data');
             }
         };
 
         //监听行工具事件
-        table.on('tool(news_list)', function(obj){
+        table.on('tool(hospital_list)', function(obj){
             var data = obj.data;
             if(obj.event === 'del'){
                 layer.confirm('真的删除行么', function(index){
-                    $.post("/admin/News/delete", {id:data.id}, function (data) {
+                    $.post("/admin/Department/delete", {id:data.id,'type':0}, function (data) {
                         if(data.code == 200){
                             table.reload('tblId', {
                                 page: {
@@ -174,10 +138,10 @@
             } else if(obj.event === 'edit'){
                 layer.open({
                     type: 2,
-                    title: '编辑新闻',
+                    title: '编辑角色',
                     shadeClose: true,
-                    area: ['750px', '90%'],
-                    content: '/admin/News/edit?id='+data.id //iframe的url
+                    area: ['650px', '90%'],
+                    content: '/admin/Department/edit?id='+data.id //iframe的url
                 });
             }
         });
@@ -188,13 +152,14 @@
         });
     });
 
+
     function show_img(img_path){
         console.log('img_src',img_path);
         layer.open({
             type: 1,
             title: false,
             closeBtn: 0,
-            area: ['80%','60%'],
+            area: ['60%','60%'],
             skin: 'layui-layer-nobg', //没有背景色
             shadeClose: true,
             content: '<img src="'+img_path+'" style="width: 100%;height: 100%;">',
