--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -32,7 +32,7 @@
 
     <div class="layui-footer" style="text-align: center;">
         <!-- 底部固定区域 -->
-        Copyright © {$year} 卓高科技技术部出品
+        Copyright © {$year} 安禾陪诊
     </div>
 </div>
 {include file="public::bottom"}
