--- a/app/admin/view/hospital/edit.html
+++ b/app/admin/view/hospital/edit.html
@@ -9,6 +9,9 @@
     .layui-input-inline {
         width: 450px !important;
     }
+    .edui-default .edui-editor{
+        position:unset !important;
+    }
 </style>
 <link rel="stylesheet" href="/static/layui/formSelects/formSelects-v4.css"/>
 
