--- a/app/admin/view/config/index.html
+++ b/app/admin/view/config/index.html
@@ -29,28 +29,20 @@
 <body>
 <div style="margin-top: 10px;">
     <span class="layui-breadcrumb">
-      <a href="javascript:;" class="menu_link" menu_link="/admin/Coupon/index" menu_id="2">优惠券</a>
+      <a href="javascript:;" class="menu_link" menu_link="/admin/Hospital/index" menu_id="2">站点配置管理</a>
       <a><cite>列表</cite></a>
     </span>
 </div>
 
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 15px;">
-    <legend>优惠券</legend>
+    <legend>配置管理</legend>
 </fieldset>
 
 <div class="demoTable">
     <div class="layui-form-item">
-        <div class="layui-inline">
-            <label class="layui-form-label">名称：</label>
-            <div class="layui-input-inline">
-                <input class="layui-input" maxlength="40" name="search" id="search_content" placeholder="请输入优惠券名称" autocomplete="off">
-            </div>
-        </div>
 
         <div class="layui-inline">
             <div class="layui-input-inline">
-                <button id="search" type="button" class="layui-btn" data-type="reload">搜索</button>
-                <!--                <button type="button" class="layui-btn layui-btn-warm" data-type="reset">重置</button>-->
                 <div class="layui-btn-group demoTable" style="margin:5px 0">
                     <button class="layui-btn layui-btn-normal " data-type="add">新增</button>
                 </div>
@@ -61,8 +53,8 @@
 
 <table class="layui-hide" id="hospital_list" lay-filter="hospital_list"></table>
 
-
 <script type="text/html" id="barDemo">
+    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 
@@ -79,17 +71,14 @@
         table.render({
             id: 'tblId'
             ,elem: '#hospital_list'
-            ,url: '/admin/Coupon/index' //数据接口
+            ,url: '/admin/Config/index' //数据接口
             ,page: true //开启分页
             ,cellMinWidth: 80
             ,cols: [ [ //表头
                 { fixed: 'left',field:'id',sort: true, title: 'ID', width:'10%', align:'center'}
-                ,{fixed: 'left',field: 'title', title: '名称',align:'center',width:'15%'}
-                ,{field: 'code', title: '识别码', align:'center',width:'20%'}
-                ,{field: 'summary', title: '简介', align:'center',width:'15%'}
-                ,{field: 'scenes', title: '可用项目',align:'center',width:'20%'}
-                ,{field: 'amount', title: '金额', align:'center',width:'15%'}
-                ,{field: 'limit', title: '满减', align:'center',width:'15%'}
+                ,{fixed: 'left',field: 'code', title: 'code',align:'center',width:'15%'}
+                ,{field: 'summary', title: '说明',templet: '#show_avatar',align:'center',width:'10%'}
+                ,{field: 'content', title: '内容',align:'center',width:'55%'}
                 ,{fixed: 'right',title: '操作',width:'15%', align:'center', toolbar: '#barDemo'}
             ] ]
         });
@@ -100,10 +89,10 @@
                 // layer.alert('新增');
                 layer.open({
                     type: 2,
-                    title: '新增优惠券',
+                    title: '新增配置',
                     shadeClose: true,
                     area: ['650px', '90%'],
-                    content: '/admin/Coupon/add' //iframe的url
+                    content: '/admin/Config/add' //iframe的url
                 });
                 // $("body",parent.document).find('iframe').attr('src','/Menu/add');
             },
@@ -128,7 +117,7 @@
             var data = obj.data;
             if(obj.event === 'del'){
                 layer.confirm('真的删除行么', function(index){
-                    $.post("/admin/Coupon/delete", {id:data.id,'type':0}, function (data) {
+                    $.post("/admin/Config/delete", {id:data.id,'type':0}, function (data) {
                         if(data.code == 200){
                             table.reload('tblId', {
                                 page: {
@@ -145,9 +134,36 @@
                     title: '编辑角色',
                     shadeClose: true,
                     area: ['650px', '90%'],
-                    content: '/admin/Coupon/edit?id='+data.id //iframe的url
+                    content: '/admin/Config/edit?id='+data.id //iframe的url
                 });
             }
+        });
+
+        //监听状态操作
+        form.on('switch(changeStatus)', function(obj){
+            if(obj.elem.checked){
+                var type = 1;
+            }else{
+                var type = 2;
+            }
+            $.ajax({
+                type:'get',
+                url:'/admin/User/delete',
+                data:{'id':this.value,'type':type},
+                success:function(data){
+                    layer.msg(data.msg);
+                    if(data.code == 200){
+                        table.reload('tblId', {
+                            page: {
+                                curr: 1 //重新从第 1 页开始
+                            }
+                        }, 'data');
+                    }
+                },
+                error:function () {
+                    layer.msg('请求失败');
+                }
+            });
         });
 
         $('.demoTable .layui-btn').on('click', function(){
