--- a/app/admin/view/bill_rule/index.html
+++ b/app/admin/view/bill_rule/index.html
@@ -30,6 +30,7 @@
         .edui-default .edui-editor{
             position:unset !important;
         }
+        .layui-form-select dl{z-index: 1000;}
     </style>
     <script type="text/javascript" charset="utf-8" src="/static/ueditor/ueditor.config.js"></script>
     <script type="text/javascript" charset="utf-8" src="/static/ueditor/ueditor.all.min.js"> </script>
