--- a/app/admin/view/hospital_service/edit.html
+++ b/app/admin/view/hospital_service/edit.html
@@ -44,24 +44,44 @@
     <div class="layui-form-item">
         <label class="layui-form-label">价格详情</label>
         <div class="layui-input-inline">
-            <textarea type="text" name="priceDescription" style="min-height:120px " autocomplete="off" placeholder="" class="layui-input">{$service.priceDescription}</textarea>
+            <script id="editor1" name="priceDescription" type="text/plain" placeholder="价格详情">{$service.priceDescription|raw}</script>
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">预约通知</label>
         <div class="layui-input-inline">
-            <textarea type="text" name="reservation" style="min-height:120px " autocomplete="off" placeholder="" class="layui-input">{$service.reservation}</textarea>
+            <script id="editor2" name="reservation" type="text/plain" placeholder="预约通知">{$service.reservation|raw}</script>
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">服务图标</label>
         <div class="layui-input-inline">
             <div class="layui-upload-drag" id="test10">
+                {if condition="$service.img"}
                 <img src="{$service.img}" style="width: 100%;height: 100%;">
+                {else /}
+                <i class="layui-icon"></i>
+                <p>点击上传，或将文件拖拽到此处</p>
+                {/if}
             </div>
             <input type="hidden" name="img" id="avatar" value="{$service.img}" lay-verify="required">
         </div>
     </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">服务详情页背景图</label>
+        <div class="layui-input-inline">
+            <div class="layui-upload-drag" id="test11">
+                {if condition="$service.detailImg"}
+                <img src="{$service.detailImg}" style="width: 100%;height: 100%;">
+                {else /}
+                <i class="layui-icon"></i>
+                <p>点击上传，或将文件拖拽到此处</p>
+                {/if}
+            </div>
+            <input type="hidden" name="detailImg" id="avatar1" value="{$service.detailImg}" lay-verify="required">
+        </div>
+    </div>
+
     <input type="hidden" name="id" value="{$service.id}">
     <div class="layui-form-item">
         <div class="layui-input-block">
@@ -76,6 +96,8 @@
 <script type="text/javascript" charset="utf-8" src="/static/ueditor/ueditor.all.min.js"> </script>
 <script>
     var ue = UE.getEditor('editor');
+    var ue = UE.getEditor('editor1');
+    var ue = UE.getEditor('editor2');
     layui.use(['form','upload'], function(){
         var form = layui.form
             ,upload=layui.upload
@@ -90,6 +112,16 @@
                 layer.msg('上传成功');
                 $('#test10').html('<img src="'+res.data.src+'" style="width: 100%;height: 100%;">');
                 $('#avatar').val(res.data.src);
+            }
+        });
+        upload.render({
+            elem: '#test11'
+            ,url: '/admin/HospitalService/upload' //改成您自己的上传接口
+            ,accept:'image'
+            ,done: function(res){
+                layer.msg('上传成功');
+                $('#test11').html('<img src="'+res.data.src+'" style="width: 100%;height: 100%;">');
+                $('#avatar1').val(res.data.src);
             }
         });
         //监听提交
